tests/reject/const_dup.ty
const MAX = 5

fn MAX() -> int:
    return 1

fn main():
    println("hi")
